# halftrace

./: .gitignore  HYPOTHESES.md  LICENSE  README.md  RESULTS.md  pyproject.toml
.github/workflows/: test.yml
scripts/: atlas_deep.py  atlas_deep_gpt.py  atlas_deep_resume.py  atlas_finish.py  atlas_finish_gpt4o.py  atlas_gpt4o_deep.py  atlas_pilot.py  atlas_rigour.py  sonnet_intermediate.py
src/halftrace/: __init__.py  compare.py  diagnose.py  fit.py  ingest.py  runner.py  trajectory.py
src/halftrace/adapters/: __init__.py  anthropic_adapter.py  openai_adapter.py
src/halftrace/probes/: __init__.py  base.py  instruction_decay.py  narration_substitution.py  state_amnesia.py  tool_repetition.py
src/halftrace/tasks/: __init__.py  base.py  find_and_synthesise.py
tests/: test_analyse_compliance.py  test_anthropic_adapter.py  test_compare.py  test_diagnose.py  test_find_and_synthesise.py  test_fit.py  test_ingest.py  test_instruction_decay.py  test_narration_substitution.py  test_runner.py  test_state_amnesia.py  test_tool_repetition.py  test_trajectory.py
